<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname  "Chef - DietManager"><!ENTITY order "Order"><!ENTITY shift "Shift">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="break_">Break</string>
    <string name="select_vehicle">"Select vehicle"</string>
    <string name="turn_on_start_shift">"Turn On Start &shift; to go for delivery"</string>
    <string name="no_results">"No Results"</string>
    <string name="notice_board">"Notice Board"</string>
    <string name="check_your_internet_connection">"Please check your Internet connection"</string>
    <string name="waiting_for_new_task">"Waiting for the new task"</string>
    <string name="terms_and_conditions">"Terms and Conditions"</string>

    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="ok">Ok</string>
    <string name="history">History</string>
    <string name="no_result">No search results</string>

    <string name="wallet_amount">DietManager Credit Amount</string>
    <string name="walletHistory">DietManager Credit</string>
    <string name="wallet">Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="enter_email_id">Enter Email ID</string>
    <string name="next">Next</string>
    <string name="oops_no_internet">Oops! No internet connection</string>

    <string name="new_order_request">"New &order; Request"</string>
    <string name="order_request">Order Request</string>
    <string name="deliver">"Delivered"</string>
    <string name="delivered">"Delivered"</string>
    <string name="order_delivered_successfully">"&order; Delivered Successfully"</string>
    <string name="order">"&order;"</string>
    <string name="orders">"&order;s"</string>
    <string name="new_task">New Task</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="new_order_txt">New &order; request</string>
    <string name="time_left">Time Left</string>
    <string name="time_left_txt">120 secs left</string>
    <string name="started_restaurant">Started Towards Restaurant</string>
    <string name="verification_code_txt">Verification Code</string>
    <string name="continu">Continue</string>
    <string name="start_shift">Start &shift;</string>
    <string name="shift_status">&shift; Status</string>
    <string name="end_shift">End &shift;</string>
    <string name="vehicle_number">Enter the vehicle number</string>
    <string name="name">Name</string>
    <string name="user_id">User ID</string>
    <string name="email">Email Address</string>
    <string name="update">Update</string>
    <string name="enter_mobile_number">"Enter Mobile Number"</string>

    <string name="reached_restaurant">"Reached Restaurant"</string>
    <string name="order_picked_up">"&order; Picked Up"</string>
    <string name="order_delivered">"&order; Delivered"</string>
    <string name="payment_received">"Payment Received"</string>
    <string name="back">"Back"</string>
    <string name="profile">"Profile"</string>
    <string name="order_history">"&order; History"</string>
    <string name="order_message">&order; #%d</string>
    <string name="you_owed">"You Owed "</string>
    <string name="item_total">Item Total</string>
    <string name="service_tax">Service Tax</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="discount">Kitchen Discount</string>
    <string name="promocode_amount">"Promocode Amount"</string>
    <string name="total">Total</string>
    <string name="payment_mode">"Payment "</string>
    <string name="no_of_items">"No. of Items"</string>
    <string name="bill_amount">"Bill Amount"</string>
    <string name="bill_paid">"Bill Paid"</string>
    <string name="returned">"Returned"</string>
    <string name="other">"Other"</string>
    <string name="reason">"Reason"</string>
    <string name="chat_us">"Chat us"</string>
    <string name="call_us">"Call us"</string>
    <string name="please_type_the_verification_code">"Please type the verification code sent to your"</string>
    <string name="amount_to_be_paid">"Amount to be paid"</string>
    <string name="please_handover_the_amount_earned">"Please handover the amount earned"</string>
    <string name="please_settle_the_amount_to_the_respective_restaurant">"Please settle the amount to the respective restaurant"</string>
    <string name="type_a_message">"Type a message"</string>
    <string name="country_name">"Country name"</string>
    <string name="feedback">"Feedback"</string>
    <string name="how_was_the_delivery">"How was the delivery?"</string>
    <string name="terrible">"Terrible"</string>
    <string name="bad">"Bad"</string>
    <string name="okay">"Okay"</string>
    <string name="good">"Good"</string>
    <string name="superb">"Superb"</string>
    <string name="give_some_feedback_in_words">"Give some feedback in words."</string>
    <string name="submit">"Submit"</string>
    <string name="report">"Report"</string>
    <string name="dispute">"Dispute"</string>
    <string name="help">"Help"</string>
    <string name="amount_to_pay">"Amount to Pay"</string>
    <string name="otp">Otp</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="full_amount">Please enter full amount</string>
    <string name="enter_the_amount_paid">Enter the amount paid</string>
    <string name="balance">"Balance"</string>
    <string name="paid">"Paid"</string>
    <string name="user">"User"</string>
    <string name="shift">"&shift;"</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="order_status">Order Status</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="call">Call</string>
    <string name="navigation">Navigation</string>
    <string name="network_error">Could not connect to internet!</string>
    <string name="shop">Shop</string>
    <string name="change_language">Change Language</string>
    <string name="please_start_shift">Please start the shift</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="the_order_has_been_cancelled_by_user">The order has been cancelled by user</string>
    <string name="cancelled">Cancelled</string>
    <string name="logout">Logout</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_upload_image">Please upload image</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="password">Password</string>

    <!--Terms & Condition and Privacy Policy-->
    <string name="login_terms_privacy_policy">By continuing, you agree to the \n Terms of Service and Privacy Policy</string>
    <string name="login_terms_and_conditions_label">Terms of Service</string>
    <string name="login_privacy_policy_label">Privacy Policy</string>
    <string name="login_terms_and_conditions_url">https://www.oyola.com.au/terms-of-service-kitchens</string>
    <string name="login_privacy_policy_url">https://www.oyola.com.au/privacy-policy</string>

    <string name="lang_english">English</string>
    <!--<item>Arabic</item>-->
    <string name="lang_japnese">Japanese</string>
    <string name="reason_facing">Are you facing any issue which we can assist with? Please reach out to us we will be happy to help !</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="no_luck">No Luck!</string>
    <string name="please_enternumber_pswd">Please enter your Mobile number and Password</string>
    <string name="select_country">Select Country</string>
    <string name="success_profile">Profile Updated Successfully</string>
    <string name="dont_pick_image">You haven\'t picked Image</string>
    <string name="wallet_detection">Oyola Credit applied</string>
    <string name="live_tasks">LIVE TASK</string>
    <string name="image_view">ImageView</string>
    <string name="agree_policies">By signing up you agree to Oyola\'s <u>Terms of Service</u>, <u>Privacy Policy</u> and <u>Content Policies</u></string>
    <string name="invalid_otp">Please enter valid OTP</string>
    <string name="please_enter_minimum_length_password">Please enter atleast 6 characters in password</string>

    <string name="register_this_account">Don\'t have an account?</string>
    <string name="please_enter_valid_number">Please enter valid mobile number</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="already_you_have_account">Already you have an account?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_using">Connect with Social</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="please_select_address">Please select Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wrong_otp">Wrong OTP</string>

    <string name="please_enter_mail_id">Please enter mail id</string>
    <string name="please_enter_valid_mail_id">Please enter valid mail id</string>
    <string name="password_and_confirm_password_doesnot_match">Password and Confirm Password doesn\'t match!</string>
    <string name="register">Register</string>
    <string name="please_upload_profile_picture">Please upload profile picture</string>
    <string name="alert_log_out">Would you like to logout ?</string>
    <string name="bank_details">Bank Details</string>
    <string name="menu_payment">Payment</string>
    <string name="enter_the_amount">Enter amount</string>

    <string name="ongoing_order">Ongoing Orders</string>
    <string name="upcoming_order">Upcoming Orders</string>
    <string name="past_order">Past Orders</string>
    <string name="cancelled_order">Cancelled Orders</string>
    <string name="no_ongoing_orders_found">No ongoing orders found</string>
    <string name="no_upcoming_orders_found">No upcoming orders found</string>
    <string name="price">Price</string>
    <string name="no_past_orders_found">No past orders found</string>
    <string name="no_cancelled_orders_found">No cancelled orders found</string>
    <string name="home">Home</string>
    <string name="earning">Earnings</string>
    <string name="waiting_for_the_new_task">Waiting for the new task</string>
    <string name="cancel">Cancel</string>
    <string name="order_list">Order List</string>
    <string name="start">Start</string>
    <string name="started_toward_location">Started toward location</string>
    <string name="waiting_for_user_approval">Waiting for user Approval</string>
    <string name="waiting_for_admin_approval">Waiting for admin Approval</string>
    <string name="edit_underline"><u>Edit</u></string>

    <string name="admin_verify">Your account is not yet verified by admin.</string>
    <string name="pending_contact_admin">Please contact the admin.</string>
    <string name="address">Address</string>
    <string name="chat">Chat</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="comment">Comment</string>
    <string name="wallet_money">Wallet Amount</string>
</resources>
