<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/colorWhite"
    app:cardCornerRadius="15dp"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/feedback"
            android:textAllCaps="true"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/how_was_the_delivery"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <RadioGroup
            android:id="@+id/rate_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/sad72"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/terrible"
                android:textAllCaps="true"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/emotion72"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bad"
                android:textAllCaps="true"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/happyy72"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/okay"
                android:textAllCaps="true"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/happy72"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/good"
                android:textAllCaps="true"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:drawableTop="@drawable/smille"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/superb"
                android:textAllCaps="true"
                android:textSize="8sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/give_some_feedback_in_words"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shadow_view"
            android:fontFamily="@font/nunito_regular"
            android:inputType="textMultiLine|textCapCharacters"
            android:lines="3"
            android:padding="8dp" />

        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.cardview.widget.CardView>