<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.dietmanager.deliveryboy.activities.OTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/verification_code_txt"
            android:src="@drawable/otp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/verification_code_txt"
            android:textColor="@color/colorGrayDark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/please_type_the_verification_code" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/nunito_regular"
            android:textColor="@color/colorAccent" />

        <me.philio.pinentry.PinEntryView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:accentType="character"
            app:digitBackground="@drawable/otp_square"
            app:digitHeight="45dp"
            app:digitSpacing="10dp"
            app:digitTextColor="@color/colorWhite"
            app:digitTextSize="10sp"
            app:digitWidth="45dp"
            app:mask=""
            app:numDigits="4"
            app:pinInputType="number" />

        <Button
            android:id="@+id/continue_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/nunito_bold"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/continu" />

    </LinearLayout>

</ScrollView>