<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="1dp"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/chat"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fbfbfb">

        <ListView
            android:id="@+id/chat_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:clipToPadding="false"
            android:divider="@null"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

        <RelativeLayout
            android:id="@+id/chat_controls_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/chat_edit_text"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/send"
                android:background="@null"
                android:hint="@string/type_a_message"
                android:imeOptions="actionSend"
                android:inputType="textAutoCorrect|textMultiLine"
                android:padding="16dp" />

            <ImageView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/message"
                android:layout_alignParentEnd="true"
                android:padding="16dp"
                android:src="@drawable/ic_chat_send"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>